Polishing (cherry picked from commit 22ca7ac)