@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2012 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -95,7 +95,7 @@ class JcaListenerContainerParser extends AbstractListenerContainerParser {
 
 		String prefetch = containerEle.getAttribute(PREFETCH_ATTRIBUTE);
 		if (StringUtils.hasText(prefetch)) {
-			configDef.getPropertyValues().add("prefetchSize", new Integer(prefetch));
+			configDef.getPropertyValues().add("prefetchSize", Integer.valueOf(prefetch));
 		}
 
 		String phase = containerEle.getAttribute(PHASE_ATTRIBUTE);
